--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "matter-js": "^0.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-keyboard-event-handler": "^1.5.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
