--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "ld46",
+  "name": "Play<<Back",
   "version": "0.1.0",
+  "author": {
+    "name": "Joe Cowman"
+  },
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
