--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Play<<Back",
+  "name": "play-back",
   "version": "0.1.0",
   "author": {
     "name": "Joe Cowman"
   },
   "license": "MIT",
   "private": true,
+  "homepage": "https://jcowman2.github.io/play-back",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
